--- a/estilos/style2.css
+++ b/estilos/style2.css
@@ -2,4 +2,60 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+header {    
+    height: 320px;
+    background-image: url("../img/design1_image2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+h1{
+    font-size: 3rem;
+    margin: -10px;
+    margin-left: 12px;
+    margin-bottom: 6px;
+    color: rgb(248, 225, 46);
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: rgb(198, 72, 50)
+}
+h2.titulo {   
+    color: rgb(248, 225, 46);
+    text-align: center;
+    border: 2px solid black;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(198, 72, 50);
+}
+.logo{
+    width: 140px;
+    position: absolute;
+    top: 400px;
+    left: 60px;
+}
+nav {    
+    position: absolute;
+    top: 50px;
+    left: 80%;   
+}
+
+a.nav{    
+    background-color: cornflowerblue;
+    text-decoration: none;
+    color: white;
+    padding: 4px;
+    margin: 0px 2px;
+    border: 1px solid black;
+    box-shadow: 1px 1px 5px black
+}
+
+a.nav.pag-actual{
+    background-color: green;
+}
+
+
+.texto{
+    position: absolute;
+    left: 300px;
+    top: 400px
 }
