--- a/styles/style.css
+++ b/styles/style.css
@@ -2,51 +2,78 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
 }
 
 header {    
     height: 320px;
-    background-image: url("../img/design1_image1.jpg");
+    background-image: url("../img/design1_image2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
+
 h1{
+    text-align: center;   
     font-size: 3rem;
+    margin: 0;
     margin-left: 12px;
+    margin-bottom: 6px;
     color: rgb(248, 225, 46);
     -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: rgb(198, 72, 50)
+    -webkit-text-stroke-color: rgb(198, 72, 50);
+    
 }
-h2.titulo {
-    background-color: black;
+
+h2.titulo {      
+    font-size: 3rem;
     color: rgb(248, 225, 46);
     text-align: center;
+    border: 2px solid black;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgb(198, 72, 50);
 }
+
 .logo{
-    width: 140px;
+    width: 250px;
     position:absolute;
-    right: 100px;
-    bottom: 850px;
+    right: 30px;
+    top: 40px;
 }
+
 nav {    
-    margin: 10px;
-    flex-direction: column;
     position: absolute;
-    top: 300px;    
+    top: 340px;
+      
 }
 
-a.nav{
-    display: block;
-    margin: 80px;
+a.nav{    
+    background-color: yellow;
+    text-decoration: none;
+    color: black;
+    padding: 12px;
+    margin: 10px 10px;
+    border: 1px solid black;
+    box-shadow: 1px 1px 5px black;
+   
+    
 }
 
+a.nav.pag-actual{
+    background-color:orange;
+}
 
 .texto{
-    position: absolute;
-    left: 400px;
-    top: 400px
+    position: relative;
+    margin: 50px;
+    
 }
+
+.texto.rules{
+    display: flex;
+    flex-direction: column;
+}
+.ne-ma{
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
 
