--- a/styles/style.css
+++ b/styles/style.css
@@ -7,21 +7,33 @@
 header {    
     height: 320px;
     background-image: url("../img/design1_image2.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: cover;    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+body{
+    padding-bottom: 1em;
+}
+
+main{
+  display: flex;
+  flex-direction: column;
 }
 
 
-h1{
-    text-align: center;   
-    font-size: 3rem;
-    margin: 0;
-    margin-left: 12px;
-    margin-bottom: 6px;
+h1{      
+    font-size: 3rem;    
     color: rgb(248, 225, 46);
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: rgb(198, 72, 50);
     
+}
+
+.logo{
+    width: 200px;    
 }
 
 h2.titulo {     
@@ -35,17 +47,14 @@ h2.titulo {
     -webkit-text-stroke-color: rgb(198, 72, 50);
 }
 
-.logo{
-    width: 250px;
-    position:absolute;
-    right: 30px;
-    top: 40px;
-}
 
-nav {    
-    position: absolute;
-    top: 340px;
-      
+
+nav {   
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    padding-top: 1em;
+    padding-bottom: 1em;       
 }
 
 a.nav{    
@@ -64,17 +73,10 @@ a.nav.pag-actual{
     background-color:orange;
 }
 
-img{
-    margin: 30px;
-    width: 600px;
+.texto{
+    display: inline-block;
 }
 
-.texto{
-    position: absolute;
-    top: 450px;
-    left: 650px;
-    font-size: large;    
-}
 
 div{
     margin: 30px;
@@ -107,6 +109,73 @@ table {
     text-align: center;    
     padding: 10px;    
  }
+ form{
+    border-style: none;
+    }
+     input[type="submit"] {
+        width: 100%;
+        background-color: orange;
+        color: black;
+        padding: 1em 1.5em;
+        margin: 0.5em ;
+        cursor: pointer;        
+        border-radius: 0.5em;
+      }
+      
+      input[type="radio"] {        
+        margin: 0.2em;
+      }
+      
+      input[type="checkbox"] {
+        border: none;        
+        margin: 0 2em;
+      }
+      
+      input[type="date"] {
+        border-style: none;
+        margin: 0 1em;    
+        padding: 0.5em 0.5em;        
+      }  
 
+  @media screen and (max-width: 640px) {
+    img{
+        margin: 5%;
+        width: 90%;        
+    }
+    
+    .texto{
+       position: relative;   
+    }
+  }
+  
+  @media screen and (min-width: 640px) and (max-width: 1280px) {
+    img{
+        margin: 5%;
+        width: 90%;
+        
+    }
+    
+    .texto{
+       position: relative;    
+    }
+  }
+
+  @media screen and (min-width: 1280px){
+   img{
+        margin: 30px;
+        width: 800px;
+    }
+    
+    .texto{
+        position: absolute;
+        top: 500px;
+        left: 900px;
+        font-size: large;    
+    }
+  }
+    
+  
+  
+ 
 
 
